# au_cs_suite

./: .gitignore  README.md  cli.py  dist.py  gui.py  pyproject.toml  test.txt
Camera/: camera.py  capture_image.py
dev/: 00-gpb-master-run.sh  00-gpb-master.sh  02-gpb-backend-run.sh  config.sh  dev00-config.sh  gpb-backend.sh  node01-init.sh  node02-build.sh  node03-run.sh  python01-init.sh  python02-build.sh  python03-run.sh
docs/: gpb02-project_vision.md  gpb99-progress_report.md  progress.md  service01-GPB.md
docs/Yeongwon/: wish.md
docs/business/: project_bid.md
docs/gpb02-technical/: fuctional_requirements.md
docs/gpb99-developer/: Security-camera_access_troubleshooting.md  UI_UX.md
docs/untitled_project/: progress.md
gpb-backend/: pyproject.toml
gpb-backend/gpb_server/app/: __main__.py
gpb-backend/gpb_server/app/cli/: app.py
gpb-backend/gpb_server/app/gui/: app.py  app2.py
gpb-backend/gpb_server/test/: __init__.py  app_backup.py  backend.py  fastapi_inst.py
gpb-backend/gpb_server/utils/: image_io.py
gpb-frontend/: cli.js  package.json
gpb-frontend-admin/: package.json
gpb_client/: frontend.js  gpb_client_test.sh
gpb_client/app/: package.json
gpb_client_admin/: cli.js  packag_backup222.json  package.json  server.js
gpb_client_admin/src/: App.js  index.js  setupProxy.js
gpb_client_test/: backup.bat  package.json
gpb_client_test/public/: index.html
gpb_client_test/src/: App.js  index.css  setupProxy.js
gpb_client_test/yd-bashbackup-2.0.1/: README.md  (+1 more)
gpb_server/: backend.py  gpb_client.sh
importnatn/: test.txt
sowon/: LGE_Time Sheet SH 1.6-1.12.2025 - NO.xlsx  data.csv  data_operation.py  latest-LGE_Time Sheet SH 1.13-1.19.2025 - NO.xlsx  latest-Punch_Report_2025-01-13_2025-01-19 - Copy.csv  main.py  main_b.py  punch_report-cleaned_data_short.xlsx  punch_report-raw_data.tsv  punch_report-raw_data_short.tsv  singleton.py  strategy.py
sowon_done/: DateManager.java  for_sowon.pl  singleton.py
(+14 files in other folders)
